# torch-abi-audit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs-deploy.yml  release.yml
docs/: zensical.toml
docs/docs/: api.md  cli.md  index.md
scripts/: check_real_world.py
src/torch_abi_audit/: __init__.py  cli.py  cpython_abi.py  demangle.py  inspect.py  report.py  symbols.py  torch_abi.py
tests/: conftest.py  test_cli.py  test_cpython_abi.py  test_demangle.py  test_inspect.py  test_report.py  test_symbols.py  test_torch_abi.py
tests/fixtures/src/: cpython_stable.c  cpython_unstable.c  torch_stable.cpp  torch_unstable.cpp
